Updated R Jupyter NB file

--- a/creditcard.Rmd
+++ b/creditcard.Rmd
@@ -54,7 +54,7 @@ df_test  <- df[-trainIndex,]
 
 
 ```{r}
-df_train <- df_train %>% 
+df <- df %>% 
   mutate(A1 = ifelse(V1 < 2,1,0),
          A2 = ifelse(V2 > 1.5,1,0),
          A3 = ifelse(V3 < 2,1,0),
@@ -68,12 +68,11 @@ df_train <- df_train %>%
          A12 = ifelse(V12 < -2.5,1,0),
          A14 = ifelse(V14 < -1.5,1,0),
          A16 = ifelse(V16 < -2,1,0),
-         A17 = ifelse(V17 <-1,1,0),
+         A17 = ifelse(V17 < -1,1,0),
          A18 = ifelse(V18 < -2.5,1,0),
          A19 = ifelse(V19 > 2,1,0),
          A21 = ifelse(V21 > 0.7,1,0))
 ```
-
 
 
 Let us plot the distribution of the `class` variable:
@@ -90,14 +89,24 @@ table(df$Class)
 
 ```{r}
 df <- df %>% 
-    select(-V8,-V13,-V15,-V20,-V22,-V23,-V24,-V25,-V26,-V27,-V28)
+    select(-V8,
+           -V13,
+           -V15,
+           -V20,
+           -V22,
+           -V23,
+           -V24,
+           -V25,
+           -V26,
+           -V27,
+           -V28)
 ```
 
 ```{r}
 lul <- df %>% 
   group_by(Class) %>% 
   nest() %>% 
-  mutate(qs = map(data, t(quantile(V1, probs = c(0.5,0.75)))))
+  mutate(qs = map(data, t(quantile(df$V1, probs = c(0.5,0.75)))))
 ```
 
 
